@@ -1,3 +1,8 @@
+2003-08-17  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b3
+
+        * Fix bug in Nuke integration where the language was never saved.
+          (Thanks Warren).
+
 2003-08-17  Joan McGalliard <gallery@joanhenge.plus.com> 1.4.1-cvs-b2
 
 	* Code freeze of 1.4. Merging 1.4-cvs-b133 into 1.4.1 branch.
